--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "just-clone": "^3.1.0",
     "just-snake-case": "^1.1.0",
     "vue": "^2.5.13",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
