--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "just-camel-case": "^4.0.2",
     "just-clone": "^3.1.0",
     "just-snake-case": "^1.1.0",
+    "moment": "^2.24.0",
     "vue": "^2.5.13",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
@@ -40,7 +41,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-verbose-reporter": "^0.0.6",
     "karma-webpack": "^3.0.5",
-    "mocha": "^6.1.3",
+    "mocha": "^6.1.4",
     "power-assert": "^1.4.4",
     "sinon": "^7.3.1",
     "style-loader": "^0.23.1",
